--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
+[develop]
+script_dir=$base/lib/map_overlay_ros2
+[install]
+install_scripts=$base/lib/map_overlay_ros2
 [flake8]
 ignore = W504, W503, E203
 max-line-length = 88
